Replace report dto's with records + Clean up