@@ -9,17 +9,25 @@ import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import pl.kamann.config.global.Codes;
+import pl.kamann.dtos.reports.AttendanceReportDto;
+import pl.kamann.dtos.reports.EventReportDto;
+import pl.kamann.dtos.reports.RevenueReportDto;
+import pl.kamann.entities.membershipcard.MembershipCardType;
 import pl.kamann.entities.reports.AttendanceStatEntity;
 import pl.kamann.entities.reports.EventStatEntity;
 import pl.kamann.entities.reports.RevenueStatEntity;
+import pl.kamann.mappers.AttendanceReportMapper;
+import pl.kamann.mappers.EventReportMapper;
+import pl.kamann.mappers.RevenueReportMapper;
 import pl.kamann.repositories.admin.AttendanceStatRepository;
 import pl.kamann.repositories.admin.EventStatRepository;
 import pl.kamann.repositories.admin.RevenueStatRepository;
 
-import java.util.Collections;
+import java.math.BigDecimal;
 import java.util.List;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.mockito.Mockito.when;
 
 class AdminReportsServiceTest {
@@ -27,13 +35,22 @@ class AdminReportsServiceTest {
     private AdminReportsService adminReportsService;
 
     @Mock
-    private EventStatRepository eventStatRepository;
-
-    @Mock
     private AttendanceStatRepository attendanceStatRepository;
 
     @Mock
+    private EventStatRepository eventStatRepository;
+
+    @Mock
     private RevenueStatRepository revenueStatRepository;
+
+    @Mock
+    private EventReportMapper eventReportMapper;
+
+    @Mock
+    private AttendanceReportMapper attendanceReportMapper;
+
+    @Mock
+    private RevenueReportMapper revenueReportMapper;
 
     @BeforeEach
     void setUp() {
@@ -41,98 +58,101 @@ class AdminReportsServiceTest {
         adminReportsService = new AdminReportsService(
                 attendanceStatRepository,
                 eventStatRepository,
-                revenueStatRepository
+                revenueStatRepository,
+                eventReportMapper,
+                attendanceReportMapper,
+                revenueReportMapper
         );
     }
 
     @Test
     void testGetEventReportsNormalCase() {
-        Pageable pageable = PageRequest.of(0, 2);
+        Pageable pageable = PageRequest.of(0, 5);
         List<EventStatEntity> mockStats = List.of(
                 new EventStatEntity(null, "Yoga", 10, 7, 3),
                 new EventStatEntity(null, "Dance", 20, 15, 5)
         );
         Page<EventStatEntity> mockPage = new PageImpl<>(mockStats, pageable, mockStats.size());
-
         when(eventStatRepository.findAll(pageable)).thenReturn(mockPage);
+        when(eventReportMapper.toDto(mockStats.get(0))).thenReturn(new EventReportDto("Yoga", 10, 7, 3));
+        when(eventReportMapper.toDto(mockStats.get(1))).thenReturn(new EventReportDto("Dance", 20, 15, 5));
 
-        Page<EventStatEntity> result = adminReportsService.getEventReports(pageable);
+        Page<EventReportDto> result = adminReportsService.getEventReports(pageable);
 
         assertEquals(2, result.getTotalElements());
-        assertEquals("Yoga", result.getContent().get(0).getEventType());
-        assertEquals(10, result.getContent().get(0).getTotalEvents());
-    }
-
-    @Test
-    void testGetEventReportsEmptyDataset() {
-        Pageable pageable = PageRequest.of(0, 2);
-        Page<EventStatEntity> mockPage = new PageImpl<>(Collections.emptyList(), pageable, 0);
-
-        when(eventStatRepository.findAll(pageable)).thenReturn(mockPage);
-
-        Page<EventStatEntity> result = adminReportsService.getEventReports(pageable);
-        assertEquals(0, result.getTotalElements());
-        assertTrue(result.getContent().isEmpty());
+        assertEquals("Yoga", result.getContent().get(0).eventType());
+        assertEquals("Dance", result.getContent().get(1).eventType());
     }
 
     @Test
     void testGetAttendanceReportsNormalCase() {
-        Pageable pageable = PageRequest.of(0, 2);
+        Pageable pageable = PageRequest.of(0, 5);
         List<AttendanceStatEntity> mockStats = List.of(
                 new AttendanceStatEntity(null, "Yoga", 10, 7, 2, 1),
                 new AttendanceStatEntity(null, "Dance", 20, 15, 4, 1)
         );
         Page<AttendanceStatEntity> mockPage = new PageImpl<>(mockStats, pageable, mockStats.size());
-
         when(attendanceStatRepository.findAll(pageable)).thenReturn(mockPage);
+        when(attendanceReportMapper.toDto(mockStats.get(0))).thenReturn(new AttendanceReportDto("Yoga", 10, 7, 2, 1));
+        when(attendanceReportMapper.toDto(mockStats.get(1))).thenReturn(new AttendanceReportDto("Dance", 20, 15, 4, 1));
 
-        Page<AttendanceStatEntity> result = adminReportsService.getAttendanceReports(pageable);
+        Page<AttendanceReportDto> result = adminReportsService.getAttendanceReports(pageable);
 
         assertEquals(2, result.getTotalElements());
-        assertEquals("Yoga", result.getContent().get(0).getEventName());
-        assertEquals(10, result.getContent().get(0).getTotalParticipants());
-    }
-
-    @Test
-    void testGetAttendanceReportsEmptyDataset() {
-        Pageable pageable = PageRequest.of(0, 2);
-        Page<AttendanceStatEntity> mockPage = new PageImpl<>(Collections.emptyList(), pageable, 0);
-
-        when(attendanceStatRepository.findAll(pageable)).thenReturn(mockPage);
-
-        Page<AttendanceStatEntity> result = adminReportsService.getAttendanceReports(pageable);
-        assertEquals(0, result.getTotalElements());
-        assertTrue(result.getContent().isEmpty());
+        assertEquals("Yoga", result.getContent().get(0).eventName());
+        assertEquals("Dance", result.getContent().get(1).eventName());
     }
 
     @Test
     void testGetRevenueReportsNormalCase() {
-        Pageable pageable = PageRequest.of(0, 2);
+        Pageable pageable = PageRequest.of(0, 5);
         List<RevenueStatEntity> mockStats = List.of(
-                new RevenueStatEntity(null, "Basic", 2000.0, 10),
-                new RevenueStatEntity(null, "Premium", 5000.0, 20)
+                new RevenueStatEntity(null, MembershipCardType.MONTHLY_4, new BigDecimal("2000.0"), 10),
+                new RevenueStatEntity(null, MembershipCardType.MONTHLY_8, new BigDecimal("5000.0"), 20)
         );
         Page<RevenueStatEntity> mockPage = new PageImpl<>(mockStats, pageable, mockStats.size());
-
         when(revenueStatRepository.findAll(pageable)).thenReturn(mockPage);
+        when(revenueReportMapper.toDto(mockStats.get(0))).thenReturn(new RevenueReportDto(MembershipCardType.MONTHLY_4.getDisplayName(), new BigDecimal("2000.0"), 10));
+        when(revenueReportMapper.toDto(mockStats.get(1))).thenReturn(new RevenueReportDto(MembershipCardType.MONTHLY_8.getDisplayName(), new BigDecimal("5000.0"), 20));
 
-        Page<RevenueStatEntity> result = adminReportsService.getRevenueReports(pageable);
+        Page<RevenueReportDto> result = adminReportsService.getRevenueReports(pageable);
 
         assertEquals(2, result.getTotalElements());
-        assertEquals("Basic", result.getContent().get(0).getMembershipType());
-        assertEquals(2000.0, result.getContent().get(0).getTotalRevenue());
+        assertEquals(MembershipCardType.MONTHLY_4.getDisplayName(), result.getContent().get(0).membershipType());
+        assertEquals(MembershipCardType.MONTHLY_8.getDisplayName(), result.getContent().get(1).membershipType());
+    }
+
+    @Test
+    void testGetEventReportsEmptyDataset() {
+        Pageable pageable = PageRequest.of(0, 5);
+        Page<EventStatEntity> mockPage = new PageImpl<>(List.of(), pageable, 0);
+        when(eventStatRepository.findAll(pageable)).thenReturn(mockPage);
+
+        Page<EventReportDto> result = adminReportsService.getEventReports(pageable);
+
+        assertEquals(0, result.getTotalElements());
+    }
+
+    @Test
+    void testGetAttendanceReportsEmptyDataset() {
+        Pageable pageable = PageRequest.of(0, 5);
+        Page<AttendanceStatEntity> mockPage = new PageImpl<>(List.of(), pageable, 0);
+        when(attendanceStatRepository.findAll(pageable)).thenReturn(mockPage);
+
+        Page<AttendanceReportDto> result = adminReportsService.getAttendanceReports(pageable);
+
+        assertEquals(0, result.getTotalElements());
     }
 
     @Test
     void testGetRevenueReportsEmptyDataset() {
-        Pageable pageable = PageRequest.of(0, 2);
-        Page<RevenueStatEntity> mockPage = new PageImpl<>(Collections.emptyList(), pageable, 0);
-
+        Pageable pageable = PageRequest.of(0, 5);
+        Page<RevenueStatEntity> mockPage = new PageImpl<>(List.of(), pageable, 0);
         when(revenueStatRepository.findAll(pageable)).thenReturn(mockPage);
 
-        Page<RevenueStatEntity> result = adminReportsService.getRevenueReports(pageable);
+        Page<RevenueReportDto> result = adminReportsService.getRevenueReports(pageable);
+
         assertEquals(0, result.getTotalElements());
-        assertTrue(result.getContent().isEmpty());
     }
 
     @Test
